--- a/enroll/templates/enroll/base.html
+++ b/enroll/templates/enroll/base.html
@@ -4,12 +4,12 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>CRUD - Geekyshows</title>
+ <title>Student Management System</title>
  <link rel="stylesheet" href="{% static 'enroll/css/bootstrap.css' %}">
 </head>
 <body>
  <div class="container mt-5">
-  <h2 class="text-center alert alert-danger">Function Based View ModelForm CRUD Project</h2>
+  <h2 class="text-center alert alert-dark">Student Management System</h2>
   {% block content %} {% endblock content %}
  </div>
  <script src="{% static 'enroll/js/jquery.js' %}"></script>
