--- a/enroll/templates/enroll/addandshow.html
+++ b/enroll/templates/enroll/addandshow.html
@@ -3,7 +3,7 @@
 <div class="row">
  <div class="col-sm-4">
   <h4 class="text-center alert alert-info">Add New Student</h4>
-  <form action="" method="POST">
+  <form action="" method="POST" enctype="multipart/form-data">
    {% csrf_token %}
    {{form.as_p}}
    <input type="submit" class="btn btn-success" value="Add">
@@ -18,8 +18,10 @@
        <tr>
          <th scope="col">ID</th>
          <th scope="col">Name</th>
+         <th scope="col">Father Name</th>
          <th scope="col">Email</th>
-         <th scope="col">Password</th>
+         <th scope="col">Mobile Number</th>
+         <th scope="col">Image</th>
          <th scope="col">Action</th>
        </tr>
      </thead>
@@ -27,11 +29,14 @@
       {% for st in stu %}
        <tr>
          <th scope="row">{{st.id}}</th>
+         <td>{{st.Fathername}}</td>
          <td>{{st.name}}</td>
          <td>{{st.email}}</td>
          <td>{{st.password}}</td>
+        <td><img src="{{ st.image.url }}" class="card-img-top img-fluid" alt="" width="42" height="42" ></td>
+         
          <td>
-         <a href="{% url 'updatedata' st.id %}" class="btn btn-warning btn-sm">Edit</a>
+         <a href="{% url 'updatedata' st.id %}" class="btn btn-warning btn-sm">Edit</a><br>
          <form action="{% url 'deletedata' st.id %}" method="post" class="d-inline"> {% csrf_token %}
           <input type="submit" class="btn btn-danger btn-sm" value="Delete">
          </form>
