--- a/enroll/templates/enroll/updatestudent.html
+++ b/enroll/templates/enroll/updatestudent.html
@@ -3,7 +3,7 @@
  <div class="row">
   <div class="col-sm-8 offset-2">
    <h4 class="alert alert-info">Update Student Information</h4>
-   <form action="" method="post">
+   <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" class="btn btn-success" value="Update">
